[gd_scene load_steps=7 format=2]

[ext_resource path="res://Images/UIArt/MoraLantern.png" type="Texture" id=1]
[ext_resource path="res://Fonts/AlMadiri.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/UI/SplashScreen.gd" type="Script" id=3]
[ext_resource path="res://Images/UIArt/Settings.tscn" type="PackedScene" id=4]
[ext_resource path="res://Images/UIArt/Logos/JustText.svg" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.203922, 0.203922, 0.580392, 0 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 0.441345
margin_top = -1.17285
margin_right = 1920.44
margin_bottom = 1078.82
mouse_filter = 2
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoraLantern" type="Sprite" parent="."]
position = Vector2( 143.418, 0 )
texture = ExtResource( 1 )
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 1.75732
margin_top = 60.0
margin_right = 2736.76
margin_bottom = 420.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Mora and the End of the World[/center]"
text = "Mora and the End of the World"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Node2D" parent="."]
pause_mode = 2
position = Vector2( -162.829, 358.863 )
scale = Vector2( 1.25, 1.25 )

[node name="NewGameButton" type="Panel" parent="Menu"]
anchor_left = 0.235
anchor_top = -0.579
anchor_right = 0.235
anchor_bottom = -0.579
margin_left = 334.0
margin_top = 121.6
margin_right = 711.0
margin_bottom = 205.6
rect_scale = Vector2( 0.8, 0.8 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="RichTextLabel" parent="Menu/NewGameButton"]
margin_top = 6.0
margin_right = 1182.0
margin_bottom = 256.0
rect_scale = Vector2( 0.32, 0.32 )
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.282353, 0.282353, 0.8, 1 )
bbcode_enabled = true
bbcode_text = "[center]New Game[/center]"
text = "New Game"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Panel" parent="Menu"]
anchor_left = 0.235
anchor_top = -0.579
anchor_right = 0.235
anchor_bottom = -0.579
margin_left = 334.0
margin_top = 198.4
margin_right = 711.0
margin_bottom = 282.4
rect_scale = Vector2( 0.8, 0.8 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="RichTextLabel" parent="Menu/ContinueButton"]
margin_left = 4.0
margin_top = -6.0
margin_right = 1164.0
margin_bottom = 282.0
rect_scale = Vector2( 0.32, 0.32 )
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.282353, 0.282353, 0.8, 1 )
bbcode_enabled = true
bbcode_text = "[center]Continue[/center]"
text = "Continue"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Panel" parent="Menu"]
anchor_left = 0.235
anchor_top = -0.579
anchor_right = 0.235
anchor_bottom = -0.579
margin_left = 334.0
margin_top = 275.2
margin_right = 711.0
margin_bottom = 359.2
rect_scale = Vector2( 0.8, 0.8 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="RichTextLabel" parent="Menu/SettingsButton"]
margin_left = 6.0
margin_top = -5.0
margin_right = 1171.0
margin_bottom = 285.0
rect_scale = Vector2( 0.32, 0.32 )
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.282353, 0.282353, 0.8, 1 )
bbcode_enabled = true
bbcode_text = "[center]Settings[/center]"
text = "Settings"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Panel" parent="Menu"]
anchor_left = 0.235
anchor_top = -0.579
anchor_right = 0.235
anchor_bottom = -0.579
margin_left = 335.261
margin_top = 352.0
margin_right = 712.261
margin_bottom = 436.0
rect_scale = Vector2( 0.8, 0.8 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="RichTextLabel" parent="Menu/QuitButton"]
margin_left = -1.0
margin_top = -3.0
margin_right = 1182.0
margin_bottom = 259.0
rect_scale = Vector2( 0.32, 0.32 )
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.282353, 0.282353, 0.8, 1 )
bbcode_enabled = true
bbcode_text = "[center]Quit
[/center]"
text = "Quit
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 410.806, 497.134 )
scale = Vector2( 1.29121, 1.29121 )
texture = ExtResource( 5 )

[node name="Settings" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 34.152, 53.6943 )
[connection signal="gui_input" from="Menu/NewGameButton" to="." method="_on_NewGameButton_gui_input"]
[connection signal="mouse_exited" from="Menu/NewGameButton" to="." method="_on_NewGameButton_mouse_exited"]
[connection signal="gui_input" from="Menu/ContinueButton" to="." method="_on_ContinueButton_gui_input"]
[connection signal="mouse_exited" from="Menu/ContinueButton" to="." method="_on_ContinueButton_mouse_exited"]
[connection signal="gui_input" from="Menu/SettingsButton" to="." method="_on_SettingsButton_gui_input"]
[connection signal="mouse_exited" from="Menu/SettingsButton" to="." method="_on_SettingsButton_mouse_exited"]
[connection signal="gui_input" from="Menu/QuitButton" to="." method="_on_QuitButton_gui_input"]
[connection signal="mouse_exited" from="Menu/QuitButton" to="." method="_on_QuitButton_mouse_exited"]
